# kindle-book-list

./: .tool-versions  Dockerfile  Makefile  README.md  Taskfile.yaml  app.py  devbox.json  k2c.nim  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
.devcontainer/: devcontainer.json
kindle/: book.py  converter.py  test_converter.py
