[tool.black]
line-length = 119

[tool.poetry]
name = "kindle-book-list"
version = "0.1.0"
description = ""
authors = ["k-kurumi <optpia.kurumi@gmail.com>"]
readme = "README.md"
packages = [{include = "kindle_book_list"}]

[tool.poetry.dependencies]
python = "^3.11"
jaconv = "^0.3.1"
openpyxl = "^3.0.10"
pandas = "^1.5.2"
typer = {extras = ["all"], version = "^0.7.0"}


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipython = "^8.7.0"
isort = "^5.11.4"
pyright = "^1.1.285"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
